# apps/extension-panel/src/shared/openapi.ts
@@ -1,5 +1,5 @@
 import type { components } from '../generated/openapi/types'
 
 export type Country = components['schemas']['Country']
-export type Snapshot = components['schemas']['Snapshot']
+export type Snapshot = components['schemas']['PubSubSnapshotPayload']
 export type PubSubSnapshotMessage = components['schemas']['PubSubSnapshotMessage']
